; ModuleID = '/home/carl/AnghaBench/freebsd/sys/fs/nfsclient/extr_nfs_clstate.c_nfscl_freeopenowner.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/fs/nfsclient/extr_nfs_clstate.c_nfscl_freeopenowner.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32 }
%struct.nfsclowner = type { i32 }

@nfsow_list = common dso_local global i32 0, align 4
@M_NFSCLOWNER = common dso_local global i32 0, align 4
@nfsstatsv1 = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.nfsclowner*, i32)* @nfscl_freeopenowner to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @nfscl_freeopenowner(%struct.nfsclowner* %0, i32 %1) #0 {
  %3 = alloca %struct.nfsclowner*, align 8
  %4 = alloca i32, align 4
  store %struct.nfsclowner* %0, %struct.nfsclowner** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.nfsclowner*, %struct.nfsclowner** %3, align 8
  %6 = load i32, i32* @nfsow_list, align 4
  %7 = call i32 @LIST_REMOVE(%struct.nfsclowner* %5, i32 %6)
  %8 = load %struct.nfsclowner*, %struct.nfsclowner** %3, align 8
  %9 = load i32, i32* @M_NFSCLOWNER, align 4
  %10 = call i32 @free(%struct.nfsclowner* %8, i32 %9)
  %11 = load i32, i32* %4, align 4
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %13, label %16

13:                                               ; preds = %2
  %14 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @nfsstatsv1, i32 0, i32 1), align 4
  %15 = add nsw i32 %14, -1
  store i32 %15, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @nfsstatsv1, i32 0, i32 1), align 4
  br label %19

16:                                               ; preds = %2
  %17 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @nfsstatsv1, i32 0, i32 0), align 4
  %18 = add nsw i32 %17, -1
  store i32 %18, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @nfsstatsv1, i32 0, i32 0), align 4
  br label %19

19:                                               ; preds = %16, %13
  ret void
}

declare dso_local i32 @LIST_REMOVE(%struct.nfsclowner*, i32) #1

declare dso_local i32 @free(%struct.nfsclowner*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
